# minsP-POC

./: README.md  admin.py  app.db  database.py  definitions.py  generate_translation.py  main.py  pyproject.toml
templates/: form.html  index.html  kart.html  legal.html  payment.html
translations/cs_CZ/LC_MESSAGES/: app.mo  app.po
translations/en_US/LC_MESSAGES/: app.mo  app.po
