[project]
name = "minsP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Marek Szymutko", email = "xszymu01@vutbr.cz"},
]
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "uvicorn>=0.30.6",
    "sqlalchemy>=2.0.35",
    "aiohttp>=3.10.5",
    "python-multipart>=0.0.17",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
